<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/casa"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dataHeader"
            style="@style/Header"
            android:text="@string/dataHeader"
            android:textColor="#FF00C0" />
    <View style="@style/Separator" />
    <EditText
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameField"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/addressField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/addressField"
            android:inputType="textMultiLine" />
    <EditText
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneField"
        android:layout_gravity="center_horizontal"
        android:hint="@string/phoneField"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <EditText
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_gravity="center_horizontal"
        android:hint="@string/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/optionsHeader"
            style="@style/Header"
            android:text="@string/optionsHeader"
            android:textColor="#A50DA2" />
        <View style="@style/Separator" />
        <TextView
            android:text="@string/newsletterText"
            android:id="@+id/newsletterText"
            android:layout_gravity="center_horizontal"
            style="@style/Message" />

        <CheckBox
            android:id="@+id/confirmBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="41dp"
            android:text="@string/sendButton"
            android:textColorHighlight="#11FF00" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>